# possum2caom2

./: setup.cfg
possum2caom2/: main_app.py  possum_execute.py  spectral_augmentation.py
possum2caom2/tests/: test_caom_gen_visit.py  test_composable.py  test_possum_executes.py  test_spectral_augmentation.py
possum2caom2/tests/data/debug/: PSM_944MHz_20asec_1034-5552_11224_p3d_v1_peakFDFimagFit.expected.xml  PSM_944MHz_20asec_1034-5552_11224_p3d_v1_peakFDFimagFit.fits.header  PSM_944MHz_20asec_1034-5552_11224_p3d_v1_peakFDFimagFit.sc2.xml
possum2caom2/tests/data/possum/: PSM_944MHz_18asec_2013-5553_11261_p1d_v1_FDFs.expected.xml  PSM_944MHz_18asec_2013-5553_11261_p1d_v1_spectra.expected.xml  PSM_pilot1_1368MHz_18asec_2013-5552_11261_p3d_v2_FDF_im_dirty.expected.xml  PSM_pilot1_1368MHz_18asec_2013-5552_11261_p3d_v2_FDF_real_dirty.expected.xml  PSM_pilot1_1368MHz_18asec_2013-5552_11261_p3d_v2_FDF_tot_dirty.expected.xml  PSM_pilot1_1368MHz_18asec_2013-5552_11261_p3d_v2_RMSF_FWHM.expected.xml  PSM_pilot1_944MHz_18asec_2226-5552_11268_p3d_v1_FDF_imag_dirty.expected.xml  PSM_pilot1_944MHz_18asec_2226-5552_11268_p3d_v1_FDF_real_dirty.expected.xml  PSM_pilot1_944MHz_18asec_2226-5552_11268_p3d_v1_FDF_tot_dirty.expected.xml  PSM_pilot1_944MHz_18asec_2226-5552_11268_p3d_v1_RMSF_FWHM.expected.xml  PSM_pilot1_944MHz_18asec_2226-5552_11268_p3d_v1_RMSF_imag.expected.xml  PSM_pilot1_944MHz_18asec_2226-5552_11268_p3d_v1_RMSF_real.expected.xml
