[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = possum2caom2

[bdist_wheel]
universal=1

[metadata]
package_name = possum2caom2
description = Starting point for application to generate CAOM2 observations.
long_description = TBD
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = opencadc/possum2caom2
install_requires =
    astropy-healpix
    cadcdata
    cadctap
    caom2
    caom2repo
    caom2utils
    importlib-metadata
    python-dateutil
    PyYAML
    spherical-geometry
    vos

# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.4

[flake8]
max-line-length = 120

[entry_points]
possum_run = possum2caom2.composable:run
possum_run_incremental = possum2caom2.composable:run_incremental
possum_run_remote = possum2caom2.composable:run_remote
